Fix dialog header button alignment, add unit tests

--- a/src/components/container/dialog-card/dialog-card.css
+++ b/src/components/container/dialog-card/dialog-card.css
@@ -25,6 +25,7 @@
 	display: block;
 	font-weight: bold;
 	overflow: hidden;
+	text-align: left;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	max-width: 100%;
